--- a/assets/style.css
+++ b/assets/style.css
@@ -8,27 +8,56 @@
 body {
     font-family: 'Lato', sans-serif;
     font-family: 'Oswald', sans-serif;
+    background-color: #f2f2f2;
 }
 
-canvas{
-    display: flex;
-    margin-top: 20vh;
-    justify-content: center;
-    flex-direction: row;
-    border-radius: 50vh;
-    height: 320px;
-    width: 320px;
-    border: 2px solid black;
+button {
+    display: inline-block;
+    border-radius: 50px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 20px;
 }
 
-button{
-    border-radius: 50vh;
-    padding: 1vh 1vh 1vh 1vh;
+button:hover {
+    background-color: #0069d9;
 }
 
 main {
+    padding-top: 20vh;
+}
+
+#play_section, #score_section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#player_choice, #player_score {
+    margin-top: 5vh;
+    font-size: 20px;
+    display: flex;
+    flex-basis: 50%;
+    justify-content: left;
+}
+
+#computer_choice, #computer_score {
+    margin-top: 5vh;
+    font-size: 20px;
+    display: flex;
+    flex-basis: 50%;
+    justify-content: right;
+}
+
+#show_result {
     display: flex;
     justify-content: center;
-    padding: 20vh 20vh 20vh 20vh;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 5vh;
 }
+
 
