--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,11 @@ body {
     background-color: #f2f2f2;
 }
 
+body, h1 {
+    display: flex;
+    justify-content: center;
+}
+
 button {
     display: inline-block;
     border-radius: 50px;
@@ -60,4 +65,28 @@ main {
     margin-top: 5vh;
 }
 
+@media (max-width: 576px) {
+    main {
+        padding-top: 2vh;
+    }
+    body {
+        font-size: 16px;
+    }
+    body, h1 {
+        display: flex;
+        justify-content: center;
+        font-size: larger;
+    }
+
+    button {
+        width: 100%;
+        font-size: 14px;
+        padding: 8px 15px;
+        margin: 10px;
+    }
+    #player_choice, #player_score, #computer_choice, #computer_score, #show_result {
+        font-size: 18px;
+        margin-top: 3vh;
+    }
+}
 
