Testing start button screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,6 +65,33 @@ main {
     margin-top: 5vh;
 }
 
+#start_screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 50px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #0069d9;
+  }
+
 @media (max-width: 576px) {
     main {
         padding-top: 2vh;
