--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,8 @@
 .wrapper {
     display: flex;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    
 }
 
 body {
@@ -65,6 +67,14 @@ main {
     margin-top: 5vh;
 }
 
+#get_winner {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 5vh;
+}
+
 #start_screen {
     display: flex;
     flex-direction: column;
@@ -72,6 +82,7 @@ main {
     align-items: center;
     height: 100vh;
   }
+
 
   h1 {
     font-size: 36px;
@@ -91,6 +102,35 @@ main {
   button:hover {
     background-color: #0069d9;
   }
+
+  #game_over_screen {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 40vh;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #000;
+    text-align: center;
+  }
+  
+  #play_again_button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #ad4b4b;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+  
+  #play_again_button:hover {
+    background-color: #ad4b4b;
+  }
+  
 
 @media (max-width: 576px) {
     main {
