--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
-
+/* Body wrapper*/
 .wrapper {
     display: flex;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.8);
     
 }
-
+/* Fonts and general styling*/
 body {
     font-family: 'Lato', sans-serif;
     font-family: 'Oswald', sans-serif;
@@ -17,7 +17,7 @@ body, h1 {
     display: flex;
     justify-content: center;
 }
-
+/* Buttons styling*/
 button {
     display: inline-block;
     border-radius: 50px;
@@ -37,7 +37,7 @@ button:hover {
 main {
     padding-top: 20vh;
 }
-
+/* Positions of player and computer choices and scores*/
 #play_section, #score_section {
     display: flex;
     flex-wrap: wrap;
@@ -67,14 +67,7 @@ main {
     margin-top: 5vh;
 }
 
-#get_winner {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 5vh;
-}
-
+/* Greeting message styling */
 #start_screen {
     position: absolute;
     top: 50%;
@@ -87,26 +80,12 @@ main {
     text-align: center;
   }
 
-
   h1 {
     font-size: 36px;
     margin-bottom: 20px;
   }
 
-  button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 50px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background-color: #0069d9;
-  }
-
+  /* Styling of the end game */
   #game_over_screen {
     display: none;
     position: absolute;
@@ -119,7 +98,16 @@ main {
     box-shadow: 0 0 10px #000;
     text-align: center;
   }
+
+  #get_winner {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 5vh;
+}
   
+/* Play again styling */
   #play_again_button {
     display: block;
     margin: 20px auto;
@@ -134,8 +122,16 @@ main {
   #play_again_button:hover {
     background-color: #ad4b4b;
   }
-  
 
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  /* Small screen styling */
 @media (max-width: 576px) {
     main {
         padding-top: 2vh;
@@ -159,5 +155,12 @@ main {
         font-size: 18px;
         margin-top: 3vh;
     }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+      }
 }
 
